unpackaged/main/default/objects/MyObject__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>update</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Myobjects</relationshipLabel>
    <relationshipName>Myobjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>