unpackaged/main/default/objects/MyObject__c/fields/my_field__c.field-meta.xml
<CustomField>
    <fullName>my_field__c</fullName>
    <description>my custom fileds</description>
    <label>my field</label>
    <type>Email</type>
</CustomField>