unpackaged/main/default/objects/MyObject__c/fields/MyCheckBox__c.field-meta.xml
<CustomField>
    <fullName>MyCheckBox__c</fullName>
    <defaultValue>true</defaultValue>
    <label>MyCheckBox</label>
    <type>Checkbox</type>
</CustomField>