unpackaged/main/default/objects/MyObject__c/fields/MyNewField__c.field-meta.xml
<CustomField>
    <fullName>MyNewField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MyNewField</label>
    <type>Checkbox</type>
</CustomField>