unpackaged/main/default/objects/MyObject__c/recordTypes/MyRecord.recordType-meta.xml
<RecordType>
    <fullName>MyRecord</fullName>
    <active>true</active>
    <description>tests</description>
    <label>MyRecord</label>
</RecordType>